--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "Christian Goltz <christian.goltz@invao.org>",
   "license": "MIT",
   "devDependencies": {
+    "@types/ramda": "^0.26.22",
     "nodemon": "^1.19.2",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.3"
@@ -15,6 +16,18 @@
   "scripts": {
     "prepublish": "tsc",
     "start": "tsc && node dist/index.js",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'tsc'"
+    "dev": "nodemon --watch 'src/**/*' --ext 'ts' --exec 'tsc'"
+  },
+  "dependencies": {
+    "@types/async-lock": "^1.1.1",
+    "@types/crypto-js": "^3.1.43",
+    "@types/ws": "^6.0.3",
+    "async-lock": "^1.2.2",
+    "crypto-js": "^3.1.9-1",
+    "moment": "^2.24.0",
+    "ramda": "^0.26.1",
+    "reconnecting-websocket": "^4.2.0",
+    "unique-random": "^2.1.0",
+    "ws": "^7.1.2"
   }
 }
