--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "Christian Goltz <christian.goltz@invao.org>",
   "license": "MIT",
   "devDependencies": {
+    "@types/node-fetch": "^2.5.2",
     "@types/ramda": "^0.26.22",
     "nodemon": "^1.19.2",
     "ts-node": "^8.4.1",
@@ -21,10 +22,15 @@
   "dependencies": {
     "@types/async-lock": "^1.1.1",
     "@types/crypto-js": "^3.1.43",
+    "@types/qs": "^6.5.3",
     "@types/ws": "^6.0.3",
     "async-lock": "^1.2.2",
+    "ccxt": "^1.18.1210",
     "crypto-js": "^3.1.9-1",
     "moment": "^2.24.0",
+    "node-fetch": "^2.6.0",
+    "qs": "^6.9.0",
+    "query-string": "^6.8.3",
     "ramda": "^0.26.1",
     "reconnecting-websocket": "^4.2.0",
     "unique-random": "^2.1.0",
