--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "async-lock": "^1.2.2",
+    "decimal.js": "^10.2.0",
     "ccxt": "^1.26.45",
     "crypto-js": "^3.1.9-1",
     "moment": "^2.24.0",
